--- a/cv.tex
+++ b/cv.tex
@@ -1,469 +1,51 @@
-%-----------------------------------------------------------------------------------------------------------------------------------------------%
-%	The MIT License (MIT)
-%
-%	Copyright (c) 2019 Jan Küster
-%
-%	Permission is hereby granted, free of charge, to any person obtaining a copy
-%	of this software and associated documentation files (the "Software"), to deal
-%	in the Software without restriction, including without limitation the rights
-%	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-%	copies of the Software, and to permit persons to whom the Software is
-%	furnished to do so, subject to the following conditions:
-%	
-%	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-%	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-%	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-%	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-%	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-%	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-%	THE SOFTWARE.
-%	
-%
-%-----------------------------------------------------------------------------------------------------------------------------------------------%
+\documentclass[12pt,a4paper,roman]{moderncv}
+\moderncvtheme[blue]{classic}
+\usepackage[utf8]{inputenc}
+\usepackage[scale=0.8]{geometry} % La taille pris par le contenu, ici on a 15% de marges.
+\nopagenumbers{} % Permet de masquer les numéros de page
+
+\setlength{\hintscolumnwidth}{0.21\textwidth}
+
+\title{Junior bioinformatics developer}
+\firstname{Charles}
+\familyname{MONOD-BROCA}
+\address{39, avenue de Breteuil}{75007 Paris}
+\mobile{+33 6 35 92 44 97}
+\email{charles.monod-broca@neuf.fr}
+ 
 
-
-%============================================================================%
-%
-%	DOCUMENT DEFINITION
-%
-%============================================================================%
-
-%we use article class because we want to fully customize the page and don't use a cv template
-\documentclass[10pt,A4]{article}	
-
-
-%----------------------------------------------------------------------------------------
-%	ENCODING
-%----------------------------------------------------------------------------------------
-
-% we use utf8 since we want to build from any machine
-\usepackage[utf8]{inputenc}		
-
-%----------------------------------------------------------------------------------------
-%	LOGIC
-%----------------------------------------------------------------------------------------
-
-% provides \isempty test
-\usepackage{xstring, xifthen}
-
-%----------------------------------------------------------------------------------------
-%	FONT BASICS
-%----------------------------------------------------------------------------------------
-
-% some tex-live fonts - choose your own
-
-%\usepackage[defaultsans]{droidsans}
-%\usepackage[default]{comfortaa}
-%\usepackage{cmbright}
-\usepackage[default]{raleway}
-%\usepackage{fetamont}
-%\usepackage[default]{gillius}
-%\usepackage[light,math]{iwona}
-%\usepackage[default]{roboto} 
-
-% set font default
-\renewcommand*\familydefault{\sfdefault} 	
-\usepackage[T1]{fontenc}
-
-% more font size definitions
-\usepackage{moresize}
-
-%----------------------------------------------------------------------------------------
-%	FONT AWESOME ICONS
-%---------------------------------------------------------------------------------------- 
-
-% include the fontawesome icon set
-\usepackage{fontawesome}
-
-% use to vertically center content
-% credits to: http://tex.stackexchange.com/questions/7219/how-to-vertically-center-two-images-next-to-each-other
-\newcommand{\vcenteredinclude}[1]{\begingroup
-\setbox0=\hbox{\includegraphics{#1}}%
-\parbox{\wd0}{\box0}\endgroup}
-
-% use to vertically center content
-% credits to: http://tex.stackexchange.com/questions/7219/how-to-vertically-center-two-images-next-to-each-other
-\newcommand*{\vcenteredhbox}[1]{\begingroup
-\setbox0=\hbox{#1}\parbox{\wd0}{\box0}\endgroup}
-
-% icon shortcut
-\newcommand{\icon}[3] { 							
-	\makebox(#2, #2){\textcolor{maincol}{\csname fa#1\endcsname}}
-}	
-
-% icon with text shortcut
-\newcommand{\icontext}[4]{ 						
-	\vcenteredhbox{\icon{#1}{#2}{#3}}  \hspace{2pt}  \parbox{0.9\mpwidth}{\textcolor{#4}{#3}}
-}
-
-% icon with website url
-\newcommand{\iconhref}[5]{ 						
-    \vcenteredhbox{\icon{#1}{#2}{#5}}  \hspace{2pt} \href{#4}{\textcolor{#5}{#3}}
-}
-
-% icon with email link
-\newcommand{\iconemail}[5]{ 						
-    \vcenteredhbox{\icon{#1}{#2}{#5}}  \hspace{2pt} \href{mailto:#4}{\textcolor{#5}{#3}}
-}
-
-%----------------------------------------------------------------------------------------
-%	PAGE LAYOUT  DEFINITIONS
-%----------------------------------------------------------------------------------------
-
-% page outer frames (debug-only)
-% \usepackage{showframe}		
-
-% we use paracol to display breakable two columns
-\usepackage{paracol}
-
-% define page styles using geometry
-\usepackage[a4paper]{geometry}
-
-% remove all possible margins
-\geometry{top=1cm, bottom=1cm, left=1cm, right=1cm}
-
-\usepackage{fancyhdr}
-\pagestyle{empty}
-
-% space between header and content
-% \setlength{\headheight}{0pt}
-
-% indentation is zero
-\setlength{\parindent}{0mm}
-
-%----------------------------------------------------------------------------------------
-%	TABLE /ARRAY DEFINITIONS
-%---------------------------------------------------------------------------------------- 
-
-% extended aligning of tabular cells
-\usepackage{array}
-
-% custom column right-align with fixed width
-% use like p{size} but via x{size}
-\newcolumntype{x}[1]{%
->{\raggedleft\hspace{0pt}}p{#1}}%
-
-
-%----------------------------------------------------------------------------------------
-%	GRAPHICS DEFINITIONS
-%---------------------------------------------------------------------------------------- 
-
-%for header image
-\usepackage{graphicx}
-
-% use this for floating figures
-% \usepackage{wrapfig}
-% \usepackage{float}
-% \floatstyle{boxed} 
-% \restylefloat{figure}
-
-%for drawing graphics		
-\usepackage{tikz}				
-\usetikzlibrary{shapes, backgrounds,mindmap, trees}
-
-%----------------------------------------------------------------------------------------
-%	Color DEFINITIONS
-%---------------------------------------------------------------------------------------- 
-\usepackage{transparent}
-\usepackage{color}
-
-% primary color
-\definecolor{maincol}{RGB}{ 225, 0, 0 }
-
-% accent color, secondary
-% \definecolor{accentcol}{RGB}{ 250, 150, 10 }
-
-% dark color
-\definecolor{darkcol}{RGB}{ 70, 70, 70 }
-
-% light color
-\definecolor{lightcol}{RGB}{245,245,245}
-
-
-% line spacing
-\usepackage{setspace}
-\singlespacing
-
-% Package for links, must be the last package used
-\usepackage[hidelinks]{hyperref}
-
-% returns minipage width minus two times \fboxsep
-% to keep padding included in width calculations
-% can also be used for other boxes / environments
-\newcommand{\mpwidth}{\linewidth-\fboxsep-\fboxsep}
-	
-
-
-%============================================================================%
-%
-%	CV COMMANDS
-%
-%============================================================================%
-
-%----------------------------------------------------------------------------------------
-%	 CV LIST
-%----------------------------------------------------------------------------------------
-
-% renders a standard latex list but abstracts away the environment definition (begin/end)
-\newcommand{\cvlist}[1] {
-	\begin{itemize}{#1}\end{itemize}
-}
-
-%----------------------------------------------------------------------------------------
-%	 CV TEXT
-%----------------------------------------------------------------------------------------
-
-% base class to wrap any text based stuff here. Renders like a paragraph.
-% Allows complex commands to be passed, too.
-% param 1: *any
-\newcommand{\cvtext}[1] {
-	\begin{tabular*}{1\mpwidth}{p{0.98\mpwidth}}
-		\parbox{1\mpwidth}{#1}
-	\end{tabular*}
-}
-
-%----------------------------------------------------------------------------------------
-%	CV SECTION
-%----------------------------------------------------------------------------------------
-
-% Renders a a CV section headline with a nice underline in main color.
-% param 1: section title
-\newcommand{\cvsection}[1] {
-	\vspace{9pt}
-	\cvtext{
-		\textbf{\Large{\textcolor{darkcol}{\uppercase{#1}}}}\\[-4pt]
-		\textcolor{maincol}{ \rule{0.1\textwidth}{2pt} } \\
-	}
-}
-
-%----------------------------------------------------------------------------------------
-%	META SKILL
-%----------------------------------------------------------------------------------------
-
-% Renders a progress-bar to indicate a certain skill in percent.
-% param 1: name of the skill / tech / etc.
-% param 2: level (for example in years)
-% param 3: percent, values range from 0 to 1
-\newcommand{\cvskill}[3] {
-	\begin{tabular*}{1\mpwidth }{p{0.72\mpwidth} r}
- 		\textcolor{black}{\textbf{#1}} & \textcolor{maincol}{#2}\\
-	\end{tabular*}%
-	
-	\hspace{4pt}
-	\begin{tikzpicture}[scale=1,rounded corners=2pt,very thin]
-		\fill [lightcol] (0,0) rectangle (1\mpwidth, 0.15);
-		\fill [maincol] (0,0) rectangle (#3\mpwidth, 0.15);
-  	\end{tikzpicture}%
-}
-
-%----------------------------------------------------------------------------------------
-%	 CV EVENT
-%----------------------------------------------------------------------------------------
-
-% Renders a table and a paragraph (cvtext) wrapped in a parbox (to ensure minimum content
-% is glued together when a pagebreak appears).
-% Additional Information can be passed in text or list form (or other environments).
-% the work you did
-% param 1: time-frame i.e. Sep 14 - Jan 15 etc.
-% param 2:	 event name (job position etc.)
-% param 3: Customer, Employer, Industry
-% param 4: Short description
-% param 5: work done (optional)
-% param 6: technologies include (optional)
-% param 7: achievements (optional)
-\newcommand{\cvevent}[7] {
-	
-	% we wrap this part in a parbox, so title and description are not separated on a pagebreak
-	% if you need more control on page breaks, remove the parbox
-	\parbox{\mpwidth}{
-		\begin{tabular*}{1\mpwidth}{p{0.72\mpwidth}  r}
-	 		\textcolor{black}{\textbf{#2}} & \colorbox{maincol}{\makebox[0.25\mpwidth]{\textcolor{white}{#1}}} \\
-			\textcolor{maincol}{\textbf{#3}} & \\
-		\end{tabular*}\\[4pt]
-		\ifthenelse{\isempty{#4}}{}{
-			\cvtext{#4}\\
-		}
-	}
-	\ifthenelse{\isempty{#5}}{}{
-		{#5}
-	}
-	\ifthenelse{\isempty{#6}}{}{
-		\cvtext{\textbf{Technologies include:}}\\[2pt]
-		{#6}
-	}
-	\ifthenelse{\isempty{#7}}{}{
-		\cvtext{\textbf{Achievements include:}}\\[2pt]
-		{#7}
-	}
-}
-
-%----------------------------------------------------------------------------------------
-%	 CV META EVENT
-%----------------------------------------------------------------------------------------
-
-% Renders a CV event on the sidebar
-% param 1: title
-% param 2: subtitle (optional)
-% param 3: customer, employer, etc,. (optional)
-% param 4: info text (optional)
-\newcommand{\cvmetaevent}[4] {
-	\textcolor{maincol} {\cvtext{\textbf{\begin{flushleft}#1\end{flushleft}}}}
-
-	\ifthenelse{\isempty{#2}}{}{
-	\textcolor{darkcol} {\cvtext{\textbf{#2}} }
-	}
-
-	\ifthenelse{\isempty{#3}}{}{
-		\cvtext{{ \textcolor{darkcol} {#3} }}\\
-	}
-
-	\cvtext{#4}\\[14pt]
-}
-
-%---------------------------------------------------------------------------------------
-%	QR CODE
-%----------------------------------------------------------------------------------------
-
-% Renders a qrcode image (centered, relative to the parentwidth)
-% param 1: percent width, from 0 to 1
-\newcommand{\cvqrcode}[1] {
-	\begin{center}
-		\includegraphics[width={#1}\mpwidth]{qrcode}
-	\end{center}
-}
-
-
-%============================================================================%
-%
-%
-%
-%	DOCUMENT CONTENT
-%
-%
-%
-%============================================================================%
 \begin{document}
-\columnratio{0.35}
-\setlength{\columnsep}{2.2em}
-\setlength{\columnseprule}{4pt}
-\colseprulecolor{lightcol}
-\begin{paracol}{2}
-\begin{leftcolumn}
-%---------------------------------------------------------------------------------------
-%	META IMAGE
-%----------------------------------------------------------------------------------------
-\includegraphics[width=0.7\linewidth]{Charles.jpg}	%trimming relative to image size
+\maketitle
 
-%---------------------------------------------------------------------------------------
-%	META SKILLS
-%----------------------------------------------------------------------------------------
+\section{Formation}
+
+\cventry{2020 - 2021}{Master 2 - Digital Sciences}{Centre de Recherche Interdisciplinaire - Université de Paris}{Paris}{}{Ce master m'a permis d'apprendre des technologies de Machine Learning et d'Intelligence Artificielle, Réalité virtuelle/augmentée et robotique.}
 
 
-\cvsection{CONTACT}
-
-\icontext{MapMarker}{12}{ 39, avenue de Breteuil\\ 75007 Paris\\}{black}\\[4pt]
-\icontext{MobilePhone}{12}{+33 6 35 92 44 97}{black}\\[4pt]
-\iconemail{Envelope}{12}{charles.monod-broca@neuf.fr}{charles.monod-broca@neuf.fr}{black}\\[4pt]
-
-\cvsection{SKILLS}
+\section{Experiences professionnelles}
 
 
-\cvskill{Python} {7 years} {0.8} \\[-2pt]
-
-\cvskill{C/C++} {5 years} {0.6} \\[-2pt]
-
-\cvskill{Linux} {1 year} {0.4} \\[-2pt]
+\cventry{Sep 2021 - Présent}{Animateur d'ateliers numériques}{Tech Kids Academy}{Paris}{}{Enseignement des bases de la programmation auprès d'un jeune public (7-17 ans) à travers scratch, python, arduino, et plateformes propriétaires dédiées.}
 
 
-\cvsection{LANGUAGES}
+%\cventry{years}{job title}{employer}{localization}{grade}{description}
+%\cvline{name of item}{description}
+%\cvcomputer{category 1}{XXX, YYY, ZZZ}{category 2}{XXX, YYY, ZZZ}
 
+\section{Compétences Informatique et Langues}
+\subsection{Informatique}
+\cvcomputer{Langages}{\textbf{C++}:Bases solides\newline{}\textbf{python}:Avancé\newline{}\textbf{C}:Bonnes bases\newline{}}{Logiciels}{\textbf{git}:Bases\newline{}\textbf{Unity}:Intermédiaire\newline{}\textbf{Blender}:Intermédiaire\newline{}\textbf{Suites bureautiques}:\newline{}}{}
+\subsection{Langues}
 
-\cvskill{French} {Native} {1} \\[-2pt]
+\cvline{Français}{Natif}
 
-\cvskill{English} {C1} {0.7} \\[-2pt]
+\cvline{Anglais}{C1}
 
-\cvskill{Spanish} {B2} {0.5} \\[-2pt]
+\cvline{Espagnol}{B2}
 
+\section{Centres d'intérêt}
 
-\cvsection{MISCELLANEOUS}
-
-
-\icontext{Circle}{12}{Arduino}{black}\\[6pt]
-
-\icontext{Circle}{12}{Photography}{black}\\[6pt]
-
-\icontext{Circle}{12}{3D modelling}{black}\\[6pt]
-
-\icontext{Circle}{12}{Minecraft}{black}\\[6pt]
-
-
-\end{leftcolumn}
-\begin{rightcolumn}
-%---------------------------------------------------------------------------------------
-%	TITLE  HEADER
-%----------------------------------------------------------------------------------------
-\fcolorbox{white}{darkcol}{\begin{minipage}[c][3.5cm][c]{1\mpwidth}
-	\begin {center}
-		\HUGE{ \textbf{ \textcolor{white}{ Charles MONOD-BROCA } } } \\[-24pt]
-		\textcolor{white}{ \rule{0.1\textwidth}{1.25pt} } \\[4pt]
-		\large{ \textcolor{white} {Junior bioinformatics developer} }
-	\end {center}
-\end{minipage}} \\[14pt]
-\vspace{-12pt}
-
-%---------------------------------------------------------------------------------------
-%	PROFILE
-%----------------------------------------------------------------------------------------
-
-\cvsection{PROFILE}
-
-\cvtext{This is one line of my
-description\\As you can see, only\\parts of this json array get separated\\}
-
-%---------------------------------------------------------------------------------------
-%	WORK EXPERIENCE
-%----------------------------------------------------------------------------------------
-
-\cvsection{WORK EXPERIENCE}
-
-
-% param 1: time-frame i.e. Sep 14 - Jan 15 etc.
-% param 2:	 event name (job position etc.)
-% param 3: Customer, Employer, Industry
-% param 4: Short description
-% param 5: work done (optional)
-% param 6: technologies include (optional)
-% param 7: achievements (optional)
-\cvevent
-	{Sep 2021 - NOW}
-	{Digital sciences teacher}
-	{EdTech}
-	{Teaching programming basics to children (ages 7 to 17)}
-	{\cvlist{
-		\item Basically, my first point
-		\item Using Scratch and derivatives, arduino, python
-	}}
-	{\cvlist{
-		\item python
-		\item scratch
-		\item algora
-		\item arduino
-	}}
-	{}
-
-
-\cvsection{EDUCATION}
-
-
-
-\end{rightcolumn}
-\end{paracol}
-\end{document}
-
-\cvsection{PUBLICATIONS}
-
-
-
-\end{rightcolumn}
-\end{paracol}
+\cvline{Loisirs}{Guitare en autodidacte depuis 4 ans.}
+\cvline{}{Pratique du Viet Vo Dao, durant 7 ans.}
+ 
 \end{document}
