Reformatted the document and got data more concise

--- a/cv.tex
+++ b/cv.tex
@@ -1,12 +1,12 @@
-\documentclass[12pt,a4paper,roman]{moderncv}
+\documentclass[10pt,a4paper,roman]{moderncv}
 \moderncvtheme[blue]{classic}
 \usepackage[utf8]{inputenc}
-\usepackage[scale=0.8]{geometry} % La taille pris par le contenu, ici on a 15% de marges.
+\usepackage[scale=0.9]{geometry} % La taille pris par le contenu, ici on a 15% de marges.
 \nopagenumbers{} % Permet de masquer les numéros de page
 
-\setlength{\hintscolumnwidth}{0.21\textwidth}
+\setlength{\hintscolumnwidth}{0.175\textwidth}
 
-\title{Junior bioinformatics developer}
+\title{Ingénieur bioinformatique}
 \firstname{Charles}
 \familyname{MONOD-BROCA}
 \address{39, avenue de Breteuil}{75007 Paris}
@@ -19,13 +19,27 @@
 
 \section{Formation}
 
-\cventry{2020 - 2021}{Master 2 - Digital Sciences}{Centre de Recherche Interdisciplinaire - Université de Paris}{Paris}{}{Ce master m'a permis d'apprendre des technologies de Machine Learning et d'Intelligence Artificielle, Réalité virtuelle/augmentée et robotique.}
+\cventry{Sep 2020 - Jun 2021}{Master - Digital Sciences}{Centre de Recherche Interdisciplinaire - Université de Paris}{Paris}{}{Ce master m'a donné les bases des techniques d'apprentissage automatique, à travers scikitlearn et pytorch. D'autres modules m'ont fait découvrir la robotique et la réalité virtuelle.}
+
+\cventry{Sep 2019 - Jun 2020}{Master - Molécules et Cibles Thérapeutiques}{Muséum National d'Histoire Naturelle - Sorbonne Université}{Paris}{}{Ce master m'a donné des bases théoriques solides en pharmacologie (biochimie et biologie moléculaire). Les sujets abordés en cours allaient des maladies infectieuses au cancer.}
+
+\cventry{Sep 2017 - Jun 2019}{Master - Génétique et Epigénétique - Bases moléculaires de l'oncogénèse}{Institut Pasteur - Sorbonne Université}{Paris}{}{Ce master orienté recherche m'a donné de bonnes bases théoriques dans la compréhension des mécanismes génétiques qui mènent au cancer.}
+
+\cventry{Sep 2015 - Jun 2017}{Licence de Sciences de la Vie}{Université de Tours}{Tours}{}{Cette licence m'a permis de valider les prérequis en biologie moléculaire et cellulaire en vue de l'obtention d'un diplôme de Master.}
+
+\cventry{Sep 2013 - Jun 2015}{CPGE BCPST}{Lycée Pothier}{Orléans}{}{Ces deux années de classe préparatoire dite agro/véto m'ont formé à l'apprentissage de nouvelles connaissances, à la curiosité et à la méthode scientifique.}
 
 
-\section{Experiences professionnelles}
+\section{Expériences professionnelles}
 
 
-\cventry{Sep 2021 - Présent}{Animateur d'ateliers numériques}{Tech Kids Academy}{Paris}{}{Enseignement des bases de la programmation auprès d'un jeune public (7-17 ans) à travers scratch, python, arduino, et plateformes propriétaires dédiées.}
+\cventry{Sep 2021 - Présent}{Animateur d'ateliers numériques}{Tech Kids Academy}{Paris}{}{Enseignement des bases de la programmation à des groupes de jeunes (7-17 ans). Scratch, python, arduino, etc.}
+
+\cventry{Jul 2019 - Jan 2020}{Animateur d'ateliers numériques}{Villette Makerz}{Paris}{}{Initiation à la programmation, animation d'ateliers publics sur le thème des nouvelles technologies (impression 3D, robotique...)}
+
+\cventry{Mar 2020 - Jun 2020}{Stagiaire en biochimie}{Muséum National d'Histoire Naturelle}{Paris}{}{Stage bibliographique (pandémie oblige) sur l'étude métagénomique des peptides antimicrobiens et leurs effets sur le microbiote intestinal.}
+
+\cventry{Jan 2019 - Jun 2019}{Stagiaire en génétique moléculaire}{Institut Pasteur}{Paris}{}{Extraction d'ADN de S. pombe et détection de la méthylation en sortie de G0. Techniques utilisée: extraction d'ADN au phénol, FACS, Migration d'ADN sur gradient de sucrose}
 
 
 %\cventry{years}{job title}{employer}{localization}{grade}{description}
@@ -34,7 +48,7 @@
 
 \section{Compétences Informatique et Langues}
 \subsection{Informatique}
-\cvcomputer{Langages}{\textbf{C++}:Bases solides\newline{}\textbf{python}:Avancé\newline{}\textbf{C}:Bonnes bases\newline{}}{Logiciels}{\textbf{git}:Bases\newline{}\textbf{Unity}:Intermédiaire\newline{}\textbf{Blender}:Intermédiaire\newline{}\textbf{Suites bureautiques}:\newline{}}{}
+\cvcomputer{Langages}{\textbf{C++}:Bases solides\newline{}\textbf{Python}:Avancé\newline{}\textbf{C}:Bonnes bases\newline{}}{Logiciels}{\textbf{Git}:Bases\newline{}\textbf{Unity}:Intermédiaire\newline{}\textbf{Blender}:Intermédiaire\newline{}}{}
 \subsection{Langues}
 
 \cvline{Français}{Natif}
@@ -45,7 +59,6 @@
 
 \section{Centres d'intérêt}
 
-\cvline{Loisirs}{Guitare en autodidacte depuis 4 ans.}
-\cvline{}{Pratique du Viet Vo Dao, durant 7 ans.}
- 
+\cvline{Loisirs}{Guitare\newline{}Astrophotographie\newline{}Arduino\newline{}Minecraft\newline{}Modélisation 3D\newline{}}
+
 \end{document}
