--- a/cv.tex
+++ b/cv.tex
@@ -1,15 +1,19 @@
 \documentclass[10pt,a4paper,roman]{moderncv}
 \moderncvtheme[blue]{classic}
+
+\photo[80pt][0pt]{Charles.jpg}
+
 \usepackage[utf8]{inputenc}
-\usepackage[scale=0.9]{geometry} % La taille pris par le contenu, ici on a 15% de marges.
+\usepackage{fontawesome}
+\usepackage[scale=0.9]{geometry} % La taille pris par le contenu, ici on a 10% de marges.
 \nopagenumbers{} % Permet de masquer les numéros de page
 
-\setlength{\hintscolumnwidth}{0.175\textwidth}
+\setlength{\hintscolumnwidth}{0.25\textwidth}
 
 \title{Ingénieur bioinformatique}
 \firstname{Charles}
 \familyname{MONOD-BROCA}
-\address{39, avenue de Breteuil}{75007 Paris}
+\address{39, avenue de Breteuil}{75007 Paris}{France}
 \mobile{+33 6 35 92 44 97}
 \email{charles.monod-broca@neuf.fr}
  
@@ -17,46 +21,37 @@
 \begin{document}
 \maketitle
 
-\section{Formation}
-
-\cventry{Sep 2020 - Jun 2021}{Master - Digital Sciences}{Centre de Recherche Interdisciplinaire - Université de Paris}{Paris}{}{Ce master m'a donné les bases des techniques d'apprentissage automatique, à travers scikitlearn et pytorch. D'autres modules m'ont fait découvrir la robotique et la réalité virtuelle.}
-
-\cventry{Sep 2019 - Jun 2020}{Master - Molécules et Cibles Thérapeutiques}{Muséum National d'Histoire Naturelle - Sorbonne Université}{Paris}{}{Ce master m'a donné des bases théoriques solides en pharmacologie (biochimie et biologie moléculaire). Les sujets abordés en cours allaient des maladies infectieuses au cancer.}
-
-\cventry{Sep 2017 - Jun 2019}{Master - Génétique et Epigénétique - Bases moléculaires de l'oncogénèse}{Institut Pasteur - Sorbonne Université}{Paris}{}{Ce master orienté recherche m'a donné de bonnes bases théoriques dans la compréhension des mécanismes génétiques qui mènent au cancer.}
-
-\cventry{Sep 2015 - Jun 2017}{Licence de Sciences de la Vie}{Université de Tours}{Tours}{}{Cette licence m'a permis de valider les prérequis en biologie moléculaire et cellulaire en vue de l'obtention d'un diplôme de Master.}
-
-\cventry{Sep 2013 - Jun 2015}{CPGE BCPST}{Lycée Pothier}{Orléans}{}{Ces deux années de classe préparatoire dite agro/véto m'ont formé à l'apprentissage de nouvelles connaissances, à la curiosité et à la méthode scientifique.}
-
-
 \section{Expériences professionnelles}
 
+\cventry{Mars 2021 - Juin 2021}{Stagiaire en bioinformatique}{Université de Bretagne Occidentale}{Brest}{}{Aide au développement d'un logiciel d'exploration des variants. Le logiciel, cutevariant, a fait l'objet d'un papier publié dans Bioinformatic advances.}
 
-\cventry{Sep 2021 - Présent}{Animateur d'ateliers numériques}{Tech Kids Academy}{Paris}{}{Enseignement des bases de la programmation à des groupes de jeunes (7-17 ans). Scratch, python, arduino, etc.}
+\cventry{Mars 2020 - Juin 2020}{Stagiaire en biochimie}{Muséum National d'Histoire Naturelle}{Paris}{}{Stage bibliographique (pandémie oblige) sur l'étude des peptides antimicrobiens et leurs effets sur le microbiote intestinal.}
 
-\cventry{Jul 2019 - Jan 2020}{Animateur d'ateliers numériques}{Villette Makerz}{Paris}{}{Initiation à la programmation, animation d'ateliers publics sur le thème des nouvelles technologies (impression 3D, robotique...)}
-
-\cventry{Mar 2020 - Jun 2020}{Stagiaire en biochimie}{Muséum National d'Histoire Naturelle}{Paris}{}{Stage bibliographique (pandémie oblige) sur l'étude métagénomique des peptides antimicrobiens et leurs effets sur le microbiote intestinal.}
-
-\cventry{Jan 2019 - Jun 2019}{Stagiaire en génétique moléculaire}{Institut Pasteur}{Paris}{}{Extraction d'ADN de S. pombe et détection de la méthylation en sortie de G0. Techniques utilisée: extraction d'ADN au phénol, FACS, Migration d'ADN sur gradient de sucrose}
+\cventry{Janvier 2019 - Juin 2019}{Stagiaire en génétique moléculaire}{Institut Pasteur}{Paris}{}{Extraction d'ADN de S. pombe et détection de la méthylation en sortie de G0. Techniques utilisée: extraction d'ADN au phénol, FACS, Migration d'ADN sur gradient de sucrose}
 
 
-%\cventry{years}{job title}{employer}{localization}{grade}{description}
-%\cvline{name of item}{description}
-%\cvcomputer{category 1}{XXX, YYY, ZZZ}{category 2}{XXX, YYY, ZZZ}
+\section{Formation}
 
-\section{Compétences Informatique et Langues}
-\subsection{Informatique}
-\cvcomputer{Langages}{\textbf{C++}:Bases solides\newline{}\textbf{Python}:Avancé\newline{}\textbf{C}:Bonnes bases\newline{}}{Logiciels}{\textbf{Git}:Bases\newline{}\textbf{Unity}:Intermédiaire\newline{}\textbf{Blender}:Intermédiaire\newline{}}{}
-\subsection{Langues}
+\cventry{Septembre 2020 - Juin 2021}{Master - Digital Sciences}{Centre de Recherche Interdisciplinaire - Université de Paris}{Paris}{}{Machine learning, Intelligence Artificielle, Réalité augmentée/virtuelle, Robotique}
 
-\cvline{Français}{Natif}
+\cventry{Septembre 2019 - Juin 2020}{Master - Molécules et Cibles Thérapeutiques}{Muséum National d'Histoire Naturelle - Sorbonne Université}{Paris}{}{Biochimie, pharmacologie}
 
-\cvline{Anglais}{C1}
+\cventry{Septembre 2017 - Juin 2019}{Master - Génétique et Epigénétique - Bases moléculaires de l'oncogénèse}{Institut Pasteur - Sorbonne Université}{Paris}{}{Cancérologie, génétique, épigénétique, oncogénèse}
 
-\cvline{Espagnol}{B2}
+\cventry{Septembre 2015 - Juin 2017}{Licence de Sciences de la Vie}{Université de Tours}{Tours}{}{Bases en biologie moléculaire}
 
+
+\section{Compétences informatiques}
+\cvcomputer{Langages}{Python\\C/C++\\C\#\\Jinja2\\\LaTeX\\}{Logiciels}{Git\newline{}Make\newline{}Snakemake\newline{}Jupyter\newline{}Blender\newline{}Unity\newline{}Suites bureautiques\newline{}}
+\cvcomputer{Technologies}{Qt\newline{}Pytorch\newline{}Sqlite\newline{}Jinja2\newline{}}{}{}
+
+%
+%\cvline{Français}{Natif}
+%
+%\cvline{Anglais}{C1}
+%
+%\cvline{Espagnol}{B2}
+%
 \section{Centres d'intérêt}
 
 \cvline{Loisirs}{Guitare\newline{}Astrophotographie\newline{}Arduino\newline{}Minecraft\newline{}Modélisation 3D\newline{}}
