Added soft skills

--- a/cv.tex
+++ b/cv.tex
@@ -13,9 +13,13 @@
 \title{Ingénieur bioinformatique}
 \firstname{Charles}
 \familyname{MONOD-BROCA}
-\address{39, avenue de Breteuil}{75007 Paris}{France}
+\address{\faHome 39, avenue de Breteuil}{75007 Paris}{France}
 \mobile{+33 6 35 92 44 97}
 \email{charles.monod-broca@neuf.fr}
+
+
+\extrainfo{\faGithub SteampunkIslande}
+
  
 
 \begin{document}
@@ -41,19 +45,12 @@
 \cventry{Septembre 2015 - Juin 2017}{Licence de Sciences de la Vie}{Université de Tours}{Tours}{}{Bases en biologie moléculaire}
 
 
-\section{Compétences informatiques}
+\section{Compétences informatiques et langues}
 \cvcomputer{Langages}{Python\\C/C++\\C\#\\Jinja2\\\LaTeX\\}{Logiciels}{Git\newline{}Make\newline{}Snakemake\newline{}Jupyter\newline{}Blender\newline{}Unity\newline{}Suites bureautiques\newline{}}
-\cvcomputer{Technologies}{Qt\newline{}Pytorch\newline{}Sqlite\newline{}Jinja2\newline{}}{}{}
+\cvcomputer{Technologies}{Qt\newline{}Pytorch\newline{}Sqlite\newline{}Jinja2\newline{}}{Langues}{Français: Natif\\Anglais: C1\\Espagnol: B2\\}
 
-%
-%\cvline{Français}{Natif}
-%
-%\cvline{Anglais}{C1}
-%
-%\cvline{Espagnol}{B2}
-%
-\section{Centres d'intérêt}
+\section{Centres d'intérêt et compétences non techniques}
 
-\cvline{Loisirs}{Guitare\newline{}Astrophotographie\newline{}Arduino\newline{}Minecraft\newline{}Modélisation 3D\newline{}}
+\cvcomputer{Loisirs}{Guitare\newline{}Astrophotographie\newline{}Arduino\newline{}Minecraft\newline{}Modélisation 3D\newline{}}{Compétences non techniques}{Esprit d'équipe\\Curiosité\\Autonomie\\Créativité\\}
 
 \end{document}
